Refactor security headers fuzzer to allow X-XSS-Protection to either not be present or have value set as zero